// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render Wt3dList with empty message 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      wt3ds
    </div>
    <div
      className="show-for-desktop"
    >
      Wt3d
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item list-item--message"
    >
      <span>
        No wt3ds
      </span>
    </div>
  </div>
</div>
`;

exports[`should render Wt3dList with wt3ds 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-for-mobile"
    >
      wt3ds
    </div>
    <div
      className="show-for-desktop"
    >
      Wt3d
    </div>
    <div
      className="show-for-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <Wt3dListItem
      amount={195}
      createdAt={0}
      description="Gum"
      id="1"
      note=""
    />
    <Wt3dListItem
      amount={109500}
      createdAt={-345600000}
      description="Rent"
      id="2"
      note=""
    />
    <Wt3dListItem
      amount={4500}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      note=""
    />
  </div>
</div>
`;
